# pavement-intelligence

./: .env.example  .gitignore  AUDITORIA_MIGRACION.md  DEMO_MODE_IMPLEMENTATION.md  README.md  Readme.md  VALIDACION_ENTORNO_RECUPERADO.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
docs/: ARQUITECTURA_FLUJO_TPDA_ESAL_DISENO.md  ARQUITECTURA_MVP_HACKATON.md  AUDITORIA_CONTRATO_SALIDA_CONTADOR.md  AUDITORIA_DOCUMENTAL_ESAL_UCB.md  AUDITORIA_FASE1_AFORO_TPDA.md  AUDITORIA_FASE2_PESAJE.md  AUDITORIA_FINAL_FASE1_TPDA.md  AUDITORIA_IMPLEMENTACION_REVISION_AFORO.md  CIERRE_FASE1_AFORO_TPDA.md  CONTRATO_INTEGRACION_MVP.md  DISENO_CAPAS_AASHTO93.md  INTEGRACION_CBR_MODULO_RESILIENTE.md  INTEGRACION_ESAL_MR_AASHTO93_SN.md  INTEGRACION_ESAL_PROYECCION.md  INTEGRACION_PESAJE_ESAL.md  INTEGRACION_REVISION_TPDA.md  INTEGRACION_TPDA_PESAJE.md  REPORTES_INTEGRACION_MVP.md  REVISION_ADOPCION_MODULO_RESILIENTE.md  UX_REVISION_AFORO_AUTOMATICO.md  VALIDACION_CONTADOR_VIDEO.md  VALIDACION_CONTRATO_UI_CONTADOR.md  aashto93_flexible.md  asociacion_vehiculo_wim.md  assumptions.md  casos_prueba_esal.md  casos_prueba_pavimento_flexible.md  casos_prueba_tpda.md  cbr_modulo_resiliente.md  clasificacion_abc_ejes.md  clasificacion_vehicular_bolivia.md  confiabilidad_serviciabilidad.md  configuraciones_ejes.md  criterios_diseno_geometrico_por_tpda.md  diseno_por_capas.md  drenaje_pavimentos.md  especificacion_codex_esal.md  especificacion_codex_pavimento_flexible.md  especificacion_codex_tpda.md  factores_equivalencia_carga.md  (+23 more)
scripts/: compare_manual_automatic.py  debug_tracks.py  (+6 more)
(+217 files in other folders)
