[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pavement-intelligence"
version = "0.1.0"
description = "Plataforma de análisis de tránsito y diseño de pavimentos"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Equipo Pavement Intelligence"}]
dependencies = [
    "ultralytics>=8.2.0",
    "lap>=0.5.12",
    "opencv-python>=4.9.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "streamlit>=1.35.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "plotly>=5.22.0",
    "matplotlib>=3.8.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "openpyxl>=3.1.0",
    "jinja2>=3.1.0",
    "reportlab>=5.0.0",
    "pypdf>=6.0.0",
    "pdfplumber>=0.11.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "ruff>=0.4.0", "mypy>=1.10.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/pavement_intelligence"]
